#
# Top level project
#
PROJECT(LBFGS)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

########################################################
# Build the library

SET(LBFGS_SRC lbfgs.c)

ADD_LIBRARY(lbfgs-static STATIC ${LBFGS_SRC})
SET_TARGET_PROPERTIES(lbfgs-static PROPERTIES OUTPUT_NAME "lbfgs")
SET_TARGET_PROPERTIES(lbfgs-static PROPERTIES PREFIX "lib")
ADD_LIBRARY(lbfgs SHARED ${LBFGS_SRC})

INSTALL(DIRECTORY . DESTINATION ${INCLUDE_DIR}/lbfgs
          FILES_MATCHING PATTERN "*.h")
INSTALL(TARGETS lbfgs LIBRARY DESTINATION ${INSTALL_DIR}/lib)
INSTALL(TARGETS lbfgs-static ARCHIVE DESTINATION ${INSTALL_DIR}/lib)
